--- a/frontend/src/app/mensaje2/mensaje2.component.html
+++ b/frontend/src/app/mensaje2/mensaje2.component.html
@@ -1,10 +1,6 @@
 <div class="welcome-container">
   <div class="welcome-content">
-    <img
-      src="https://img.icons8.com/?size=100&id=41330&format=png&color=FFFFFF"
-      alt="Logo de Nido"
-      class="logo"
-    />
+    <img src="nido.ico" alt="Logo de Nido" class="logo" />
     <h1 class="welcome-title">¡Genial!</h1>
     <p class="welcome-description">
       Ya tenemos a tus pequeños en Nido. Ahora, vamos a crear la primera rutina
